--- a/js/package.json
+++ b/js/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "swagger-ui-dist": "^5.18.2",
+    "swagger-ui-express": "^5.0.1"
   }
 }
